<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:checked="true"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/saved"
        android:checked="true"
        android:icon="@drawable/saved"
        android:title="@string/saved"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/booking"
        android:checked="true"
        android:icon="@drawable/my_booking"
        android:title="@string/booking"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/inbox"
        android:checked="true"
        android:icon="@drawable/my_inbox"
        android:title="@string/inbox"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account"
        android:checked="true"
        android:icon="@drawable/my_account"
        android:title="@string/account"
        app:showAsAction="ifRoom" />


</menu>